
    * Add "Query before exit" dialog with "Do not query again" checkbutton.
    * Add "Query before exit" menuitem in preferences menu.
    * Add OSD-Lyrics installation.
    * Move the "Start quick setup" button to the top of the "Install and Remove" pane.
    * Add "Hide start quick setup button" menuitem in preferences menu.

2010-04-11 MA Yue <velly.empire@gmail.com>

    * Add a new icon for "Ailurus quick start"
    * Add game 'World of Padman'

2010-04-11 CHEN Yangyang <skabyy@gmail.com>

    * Cut down start up time of "clean up pane" to less than 1 second.

2010-04-08 Homer Xing <homer.xing@gmail.com>

    * Fix bug: "apt-get update" run two times before install songbird.
    * Fix bug: duplicate package names are output when songbird fails to be installed.
    * Fix bug: locale string in CommandFailError cannot be displayed.
    * Move Fedora third-party repositories to bamboo.

2010-04-07 MA Yue <velly.empire@gmail.com>
    
    * Improve Eclipse installation in Ubuntu.
    * Add PiTiVi for editing video. 

2010-04-05 Homer Xing <homer.xing@gmail.com>

    * Re-write GConfImageEntry. Make source code cleaner.

2010-04-04 Homer Xing <homer.xing@gmail.com>

    * Add clean rpm cache functionality.

2010-04-03 CHEN Yangyang <skabyy@gmail.com>

    * Ailurus will save configuration as soon as the users change preference.
    * The update checking functionality check the update from launchpad (Ubuntu)
      and fedorapeople (Fedora) now.
    * Fix a bug that Ailurus will abort when Ailurus can not find the icons.
    * Move the subfunctions of Ailurus from "Applications - System Tool" to 
      "Applications - System Tool - Ailurus Quick Start"

2010-04-03 MA Yue <velly.empire@gmail.com>

    * Improve classification in "install software" pane.
    * Improve GNOME splash screen setting.
      Display splash image via button.

2010-04-03 Starboy Qi <starboy.qi@gmail.com>

	* Add ImageMagick for Fedora
	* Add error message when remove Firefox extensions