@@ -707,3 +707,14 @@ class PiViTi(_apt_install):
     category = 'media'
     def __init__(self):
         self.pkgs = 'pitivi'
+
+class acire(_apt_install):
+    __doc__ = _('Acire: provides a library of Python examples')
+    detail = _("Acire is a simple little tool that provides a library of Python examples called snippets that outline how to do specific taks.\n"
+               "Command: sudo apt-get install acire")
+    logo = 'acire.png'
+    license = ('GNU General Public License')
+    category = 'dev'
+    depends = Repo_Acire
+    def __init__(self):
+        self.pkgs = 'acire'
